<resources>
    <string name="app_name">PamietajOZdrowiu</string>
    <string name="app_caps_name">PAMIĘTAJ O ZDROWIU</string>
    <string name="greetings">Cześć! Jak się masz?</string>
    <string name="clickme">clickMe!</string>
    <string name="yourDrugs">TWOJE LEKI</string>
    <string name="calendar">HARMONOGRAM</string>
    <string name="notifications">POWIADOMIENIA</string>
    <string name="healthHistory">KARTOTEKA</string>
    <string name="feelings">TWOJE SAMOPOCZUCIE!</string>
    <string name="drug_image">Zdjecie leku</string>
    <string name="select_health_result_prompt">Wybierz typ badania</string>


    <string-array name="health_result_types">
        <item>Wybierz typ badania</item>
        <item>Ciśnienie</item>
        <item>Cukier</item>
        <item>Temperatura ciała</item>
    </string-array>

</resources>